--- a/src/B/style.css
+++ b/src/B/style.css
@@ -5,7 +5,7 @@ body,
     height: 100%;
 }
 
-.container {
+.layout {
     width: 100%;
     height: 100%;
     display: flex;
@@ -15,7 +15,7 @@ body,
     font-size: 50px;
     font-weight: bold;
     color: #fff;
-    background-image: linear-gradient(135deg, #fab55f, #87d795);
+    background-image: linear-gradient(135deg, #fab55f, #00ffd5);
 }
 
 nav a {
