--- a/src/B/style.css
+++ b/src/B/style.css
@@ -5,25 +5,41 @@ body,
     height: 100%;
 }
 
-.layout {
+.layout,
+.details,
+.not-found {
     width: 100%;
     height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
+}
+
+
+h2 {
     font-size: 50px;
     font-weight: bold;
     color: #fff;
-    background-image: linear-gradient(135deg, #fab55f, #00ffd5);
+    background-image: linear-gradient(135deg, #cc3b73, #242378);
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
+
+
+nav {
+    display: flex;
+    background: #FFF;
+    text-align: center;
 }
 
 nav a {
-    color: #FFF;
     font-weight: normal;
-    font-size: 32px;
+    font-size: 28px;
+    margin-right: 20px;
 }
 
-nav a:first-child {
-    margin-right: 20px;
+nav a:last-child {
+    margin-right: 0;
 }
