--- a/src/B/views/home/style.css
+++ b/src/B/views/home/style.css
@@ -16,7 +16,7 @@ body,
     font-size: 50px;
     font-weight: bold;
     color: #fff;
-    background-image: linear-gradient(135deg, #fab55f, #00ffd5);
+    background-image: linear-gradient(135deg, #cc3b73, #242378);
 }
 
 nav a {
